--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,17 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:pico]
+[platformio]
+default_envs = webserver ; default env to build, not sure how to run all envs if all examples need to be build to check for errors ???
+
+[env]
 platform = https://github.com/maxgerhardt/platform-raspberrypi.git
 board = pico
 framework = arduino
 board_build.core = earlephilhower
+
+[env:authentication]
+build_src_filter = +<**/*.cpp> ; there should be something like - +<./examples/authentication/src/*.cpp> but it's not working ???
+
+[env:webserver]
+build_src_filter = +<**/*.cpp> ; there should be something like - +<./examples/webserver/src/*.cpp> but it's not working ???
