Fix to enable building all configuration at a time

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,17 +8,26 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[platformio]
-default_envs = webserver ; default env to build, not sure how to run all envs if all examples need to be build to check for errors ???
-
-[env]
+[env:httpServer]
 platform = https://github.com/maxgerhardt/platform-raspberrypi.git
 board = pico
 framework = arduino
 board_build.core = earlephilhower
 
 [env:authentication]
-build_src_filter = +<**/*.cpp> ; there should be something like - +<./examples/authentication/src/*.cpp> but it's not working ???
+platform = https://github.com/maxgerhardt/platform-raspberrypi.git
+board = pico
+framework = arduino
+board_build.core = earlephilhower
+build_src_filter =+<../examples/authentication/*.cpp>
+lib_deps = 
+	roman-gobrei/HttpServer@^1.0.4
 
 [env:webserver]
-build_src_filter = +<**/*.cpp> ; there should be something like - +<./examples/webserver/src/*.cpp> but it's not working ???
+platform = https://github.com/maxgerhardt/platform-raspberrypi.git
+board = pico
+framework = arduino
+board_build.core = earlephilhower
+build_src_filter =+<../examples/webserver/*.cpp>
+lib_deps = 
+	roman-gobrei/HttpServer@^1.0.4
