platformio.ini changes

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,26 +8,26 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:httpServer]
+[env:Lib]
 platform = https://github.com/maxgerhardt/platform-raspberrypi.git
 board = pico
 framework = arduino
 board_build.core = earlephilhower
 
-[env:authentication]
+[env:Authentication]
 platform = https://github.com/maxgerhardt/platform-raspberrypi.git
 board = pico
 framework = arduino
 board_build.core = earlephilhower
-build_src_filter =+<../examples/authentication/*.cpp>
+build_src_filter = +<../examples/authentication.cpp>
 lib_deps = 
 	roman-gobrei/HttpServer@^1.0.4
 
-[env:webserver]
+[env:HttpServer]
 platform = https://github.com/maxgerhardt/platform-raspberrypi.git
 board = pico
 framework = arduino
 board_build.core = earlephilhower
-build_src_filter =+<../examples/webserver/*.cpp>
+build_src_filter = +<../examples/httpServer.cpp>
 lib_deps = 
 	roman-gobrei/HttpServer@^1.0.4
