platformio.ini changes

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,7 +21,7 @@ framework = arduino
 board_build.core = earlephilhower
 build_src_filter = +<../examples/authentication.cpp>
 lib_deps = 
-	roman-gobrei/HttpServer@^1.0.4
+	roman-gobrei/HttpServer
 
 [env:HttpServer]
 platform = https://github.com/maxgerhardt/platform-raspberrypi.git
@@ -30,4 +30,4 @@ framework = arduino
 board_build.core = earlephilhower
 build_src_filter = +<../examples/httpServer.cpp>
 lib_deps = 
-	roman-gobrei/HttpServer@^1.0.4
+	roman-gobrei/HttpServer
