Possibility to use RP2040-ETH or W5500-EVB-Pico hardware

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@ platform = https://github.com/maxgerhardt/platform-raspberrypi.git
 board = pico
 framework = arduino
 board_build.core = earlephilhower
+lib_deps = arduino-libraries/Ethernet@^2.0.2
 
 [env:Authentication]
 platform = https://github.com/maxgerhardt/platform-raspberrypi.git
@@ -22,6 +23,7 @@ board_build.core = earlephilhower
 build_src_filter = +<../examples/authentication.cpp>
 lib_deps = 
 	roman-gobrei/HttpServer
+	arduino-libraries/Ethernet@^2.0.2
 
 [env:HttpServer]
 platform = https://github.com/maxgerhardt/platform-raspberrypi.git
@@ -31,3 +33,4 @@ board_build.core = earlephilhower
 build_src_filter = +<../examples/httpServer.cpp>
 lib_deps = 
 	roman-gobrei/HttpServer
+	arduino-libraries/Ethernet@^2.0.2
