--- a/platformio.ini
+++ b/platformio.ini
@@ -14,20 +14,29 @@ board = pico
 framework = arduino
 board_build.core = earlephilhower
 
-[env:Authentication]
-platform = https://github.com/maxgerhardt/platform-raspberrypi.git
-board = pico
-framework = arduino
-board_build.core = earlephilhower
-build_src_filter = +<../examples/authentication.cpp>
-lib_deps = 
-	roman-gobrei/HttpServer
+; [env:Authentication]
+; platform = https://github.com/maxgerhardt/platform-raspberrypi.git
+; board = pico
+; framework = arduino
+; board_build.core = earlephilhower
+; build_src_filter = +<../examples/authentication.cpp>
+; lib_deps = 
+; 	roman-gobrei/HttpServer
 
-[env:HttpServer]
+; [env:HttpServer]
+; platform = https://github.com/maxgerhardt/platform-raspberrypi.git
+; board = pico
+; framework = arduino
+; board_build.core = earlephilhower
+; build_src_filter = +<../examples/httpServer.cpp>
+; lib_deps = 
+; 	roman-gobrei/HttpServer
+
+[env:CustomHttpHandler]
 platform = https://github.com/maxgerhardt/platform-raspberrypi.git
 board = pico
 framework = arduino
 board_build.core = earlephilhower
-build_src_filter = +<../examples/httpServer.cpp>
+build_src_filter = +<../examples/handlePointer.cpp>
 lib_deps = 
 	roman-gobrei/HttpServer
